--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ nav ul li a:hover::after {
 
 /* Estilos da seção Hero */
 .hero {
-    background: url('hero-bg.jpg') no-repeat center center/cover;
+    background: url('https://esportista.github.io/arquivo/imagens/Arthur.png') no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
