--- a/styles.css
+++ b/styles.css
@@ -80,12 +80,12 @@ nav ul li a:hover::after {
 /* Estilos da seção Hero */
 .hero {
     background: url('https://esportista.github.io/arquivo/imagens/Arthur.png') no-repeat center center/cover;
-    height: 100vh; /* Reduzindo o tamanho da imagem em 20% */
+    height: 100vh; /* Tamanho da imagem */
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #fff;
+    color: #ffff00;
 }
 
 .hero-content h2 {
