--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ nav ul li a:hover::after {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #ffff00;
+    color: #000096;
 }
 
 .hero-content h2 {
