--- a/styles.css
+++ b/styles.css
@@ -82,15 +82,15 @@ nav ul li a:hover::after {
 /* Estilos da seção Hero */
 .hero {
     background: url('https://esportista.github.io/arquivo/imagens/Arthur.png') no-repeat center center;
-    background-size: contain; /* Ajusta a imagem para caber sem cortes */
+    background-size: cover; /* Cobrir toda a área da seção */
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: #2c3e50; /* Azul escuro suave */
-    background-color: #f9f9f9; /* Cor de fundo para preencher espaços vazios */
     position: relative;
+    overflow: hidden; /* Evitar que a imagem ultrapasse os limites da seção */
 }
 
 .hero::before {
@@ -101,27 +101,6 @@ nav ul li a:hover::after {
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.7); /* Overlay branco semi-transparente */
-}
-
-.hero-content {
-    position: relative;
-    z-index: 1;
-    background: rgba(255, 255, 255, 0.9); /* Fundo semi-transparente */
-    padding: 2rem;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra sutil */
-}
-
-.hero-content p {
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
-    color: #34495e; /* Azul escuro moderno */
-}
-
-.hero-content h2 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    color: #e74c3c; /* Vermelho vibrante para destaque */
 }
 
 .hero-content {
