--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,8 @@ nav ul li a:hover::after {
 /* Estilos da seção Hero */
 .hero {
     background: url('https://esportista.github.io/arquivo/imagens/Arthur.png') no-repeat center center;
-    background-size: cover; /* Cobrir toda a área da seção */
+    background-size: contain; /* Ajusta a imagem para caber sem cortes */
+    background-color: #f4f4f4; /* Cor de fundo para preencher espaços vazios */
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -93,20 +94,10 @@ nav ul li a:hover::after {
     overflow: hidden; /* Evitar que a imagem ultrapasse os limites da seção */
 }
 
-.hero::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.7); /* Overlay branco semi-transparente */
-}
-
 .hero-content {
     position: relative;
     z-index: 1;
-    background: rgba(255, 255, 255, 0.9); /* Fundo semi-transparente */
+    background: rgba(255, 255, 255, 0.9); /* Fundo semi-transparente apenas para o conteúdo */
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra sutil */
