--- a/body.css
+++ b/body.css
@@ -13,8 +13,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    margin-top: 80px; /* Margem superior para evitar sobreposição com o header */
+    margin-bottom: 80px; /* Margem inferior para evitar sobreposição com o footer */
 }
 
 .content {
