--- a/header.css
+++ b/header.css
@@ -24,15 +24,18 @@ header {
     padding: 0;
     margin: 0;
     position: absolute;
-    top: 60px;
+    top: 60px; /* Posição abaixo do botão */
     right: 20px;
     background-color: #444;
     display: none; /* Lista oculta por padrão */
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 #theme-list li {
-    padding: 10px;
+    padding: 10px 20px;
     cursor: pointer;
+    color: white;
 }
 
 #theme-list li:hover {
