--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,8 @@ header {
     cursor: pointer;
     font-size: 16px;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
     margin-left: auto; /* Empurra o botão para a direita */
+    margin-right: 20px; /* Ajusta a distância da borda direita */
 }
 
 #theme-button:hover {
