--- a/styles.css
+++ b/styles.css
@@ -90,9 +90,10 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover;
-    opacity: 0.5;
-    z-index: -1;
+    background-size: cover; /* Garante que a imagem cubra todo o espaço */
+    background-position: center; /* Centraliza a imagem */
+    opacity: 0.5; /* Opacidade da imagem */
+    z-index: -1; /* Coloca a imagem atrás do conteúdo */
     transition: opacity 0.5s ease; /* Transição suave */
     border-radius: 10px; /* Bordas arredondadas */
 }
