--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover; /* Garante que a imagem cubra todo o espaço */
+    /* background-size: cover; /* Garante que a imagem cubra todo o espaço */
     background-position: center; /* Centraliza a imagem */
     /* opacity: 1.0; /* Opacidade da imagem */
     z-index: -1; /* Coloca a imagem atrás do conteúdo */
