--- a/styles.css
+++ b/styles.css
@@ -88,9 +88,9 @@ main {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    /* background-size: cover; /* Garante que a imagem cubra todo o espaço */
+    width: 50%;
+    height: 50%;
+    background-size: cover; /* Garante que a imagem cubra todo o espaço */
     background-position: center; /* Centraliza a imagem */
     /* opacity: 1.0; /* Opacidade da imagem */
     z-index: -1; /* Coloca a imagem atrás do conteúdo */
