--- a/styles.css
+++ b/styles.css
@@ -88,10 +88,10 @@ main {
     position: absolute;
     top: 0;
     left: 0;
-    width: 50%;
+    width: 40%;
     height: 100%;
     background-size: cover; /* Garante que a imagem cubra todo o espaço */
-    background-position: center; /* Centraliza a imagem */
+    background-position: left; /* Centraliza a imagem */
     /* opacity: 1.0; /* Opacidade da imagem */
     z-index: -1; /* Coloca a imagem atrás do conteúdo */
     transition: opacity 0.5s ease; /* Transição suave */
