--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ main {
     background-color: rgba(255, 255, 255, 0.9); /* Fundo semi-transparente */
     padding: 20px;
     width: 50%;
-    text-align: right;
+    text-align: center;
     border-radius: 10px; /* Bordas arredondadas */
 }
 
