--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ main {
     background-color: rgba(255, 255, 255, 0.9); /* Fundo semi-transparente */
     padding: 20px; /* Espaçamento interno */
     width: 50%; /* Largura do elemento */
-    text-align: center; /* Alinhamento do texto ao centro */
+    text-align: left; /* Alinhamento do texto a esquerda */
     border-radius: 10px; /* Bordas arredondadas */
     margin-left: auto; /* Move o elemento para a direita */
     margin-right: 0; /* Remove a margem à direita */
